<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_pad">

    <fragment
        android:id="@+id/navigation_home"
        android:name="pt.alexandremaia.myapplication.ui.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/navigation_pad"
        android:name="pt.alexandremaia.myapplication.ui.PadFragment"
        android:label="@string/title_pad"
        tools:layout="@layout/fragment_pad" />

    <fragment
        android:id="@+id/navigation_pad2"
        android:name="pt.alexandremaia.myapplication.ui.Pad2Fragment"
        android:label="@string/title_pad2"
        tools:layout="@layout/fragment_pad2" />

    <fragment
        android:id="@+id/navigation_badges"
        android:name="pt.alexandremaia.myapplication.ui.BadgesFragment"
        android:label="@string/title_badges"
        tools:layout="@layout/fragment_badges" />

</navigation>