<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Alexandre Maia. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutFragment"
    android:padding="@dimen/main_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/ic_tapper" />

                <TextView
                    android:id="@+id/slogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/slogan"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/arrow_scroll"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/arrow_down"
                    android:src="@drawable/ic_arrow_down_24" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/appDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="@dimen/main_padding"
            android:paddingBottom="100dp"/>

        <TextView
            android:id="@+id/developedTxt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dev_link_height"
            android:text="@string/developed"
            android:textAlignment="center"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/amLogo"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:contentDescription="@string/am_logo"
            android:src="@drawable/ic_am" />

        <TextView
            android:id="@+id/txtEmail"
            style="@style/develop_links"
            android:drawableStart="@drawable/ic_email_24"
            android:autoLink="email"
            android:text="@string/author_email" />

        <TextView
            android:id="@+id/txtUrl"
            style="@style/develop_links"
            android:drawableStart="@drawable/ic_url"
            android:autoLink="web"
            android:text="@string/author_url"
            android:layout_marginBottom="100dp" />


    </LinearLayout>


</ScrollView>