<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Alexandre Maia. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding"
    android:orientation="vertical"
    tools:context=".ui.BadgesFragment">

    <TextView
        android:id="@+id/txt_tap_badge"
        android:text="@string/badge_rhythm_maker"
        style="@style/AppTitles" />

    <LinearLayout
        style="@style/BadgeLinearLayout">

        <ImageView
            android:id="@+id/badge_tap_bronze"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_tapping" />

        <ImageView
            android:id="@+id/badge_tap_silver"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_tapping" />

        <ImageView
            android:id="@+id/badge_tap_gold"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_tapping" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/grid_margin"
        android:background="@color/colorDivider"/>

    <TextView
        android:id="@+id/txt_back_badge"
        android:text="@string/badge_comeback"
        style="@style/AppTitles" />

    <LinearLayout
        style="@style/BadgeLinearLayout">

        <ImageView
            android:id="@+id/badge_back_bronze"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_comeback" />

        <ImageView
            android:id="@+id/badge_back_silver"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_comeback" />

        <ImageView
            android:id="@+id/badge_back_gold"
            style="@style/BadgeIcon"
            android:contentDescription="@string/badge_tap_btn"
            android:src="@drawable/ic_comeback" />

    </LinearLayout>


</LinearLayout>